--- a/gradle.properties
+++ b/gradle.properties
@@ -1,17 +1,19 @@
 org.gradle.jvmargs      = -Xmx1G
 
-#Fabric properties
-minecraft_version       = 1.16.2
-yarn_mappings           = 1.16.2+build.47
-loader_version          = 0.9.3+build.207
-valid_minecraft_version = 1.16.x
+# Fabric Properties
+# check these on https://fabricmc.net/use
+minecraft_version=1.16.5
+yarn_mappings=1.16.5+build.1
+loader_version=0.11.0
+
 
 #Mod properties
 mod_version             = 2.0.0
 maven_group             = io.github.bymartrixx
 archives_base_name      = player-events
 
-#Dependencies
-fabric_api_version      = 0.20.1+build.401-1.16
+# Dependencies
+# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
+fabric_version=0.29.3+1.16
 
 #curse_api_key           = xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx
